# hpp-spline

./: CMakeLists.txt
include/hpp/spline/: MathDefs.h  bernstein.h  bezier_curve.h  bezier_polynom_conversion.h  cubic_spline.h  curve_abc.h  curve_constraint.h  exact_cubic.h  polynom.h  quintic_spline.h  spline_deriv_constraint.h
include/hpp/spline/helpers/: effector_spline.h  effector_spline_rotation.h
include/hpp/spline/optimization/: OptimizeSpline.h
python/: CMakeLists.txt  spline_python.cpp
python/test/: test.py
tests/: CMakeLists.txt  Main.cpp
